# PPSC-homework-No.3-58

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: main.cpp  parallel_sum.h
